WIP root context

--- a/catalog/pom.xml
+++ b/catalog/pom.xml
@@ -385,6 +385,12 @@
             <artifactId>osgi.core</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>osgi.cmpn</artifactId>
+            <version>7.0.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <modules>
         <module>measure</module>
