pax value rename

--- a/platform/admin/core/admin-core-insecuredefaults/src/test/resources/org.ops4j.pax.web.cfg
+++ b/platform/admin/core/admin-core-insecuredefaults/src/test/resources/org.ops4j.pax.web.cfg
@@ -37,4 +37,4 @@ org.ops4j.pax.web.ssl.password=${javax.net.ssl.keyStorePassword}
 org.ops4j.pax.web.ssl.keypassword=${javax.net.ssl.keyStorePassword}
 
 # Client authenticate at server is wanted
-org.ops4j.pax.web.ssl.clientauthwanted=true
+org.ops4j.pax.web.ssl.clientauth.wanted=true
