--- a/platform/admin/core/admin-core-insecuredefaults/src/test/resources/org.ops4j.pax.web.cfg
+++ b/platform/admin/core/admin-core-insecuredefaults/src/test/resources/org.ops4j.pax.web.cfg
@@ -33,8 +33,11 @@ org.ops4j.pax.web.ssl.keystore.type=${javax.net.ssl.keyStoreType}
 # Keystore Integrity Password
 org.ops4j.pax.web.ssl.password=${javax.net.ssl.keyStorePassword}
 
+# Key password
+org.ops4j.pax.web.ssl.key.password=${javax.net.ssl.keyStorePassword}
+
 # Keystore Password
-org.ops4j.pax.web.ssl.keypassword=${javax.net.ssl.keyStorePassword}
+org.ops4j.pax.web.ssl.keystore.password=${javax.net.ssl.keyStorePassword}
 
 # Client authenticate at server is wanted
 org.ops4j.pax.web.ssl.clientauth.wanted=true
