Override spring version for camel

--- a/features/camel-karaf/pom.xml
+++ b/features/camel-karaf/pom.xml
@@ -74,6 +74,7 @@
                         <configuration>
                             <target>
                                 <replaceregexp file="${project.basedir}/target/dependency/apache-camel-${camel.version}-features.xml" match="(&lt;repository&gt;.*&lt;/repository&gt;)" replace="" byline="true" />
+                                <replaceregexp file="${project.basedir}/target/dependency/apache-camel-${camel.version}-features.xml" match="(\[5,6\))" replace="${spring.feature.version}" byline="true" />
                             </target>
                         </configuration>
                     </execution>
