--- a/distribution/ddf-common/src/main/resources-filtered/etc/startup.properties
+++ b/distribution/ddf-common/src/main/resources-filtered/etc/startup.properties
@@ -23,5 +23,5 @@ mvn\:org.apache.felix/org.apache.felix.configadmin/${felix.configadmin.version}=
 mvn\:org.apache.sling/org.apache.sling.commons.johnzon/1.2.16 = 11
 mvn\:org.apache.felix/org.apache.felix.fileinstall/${felix.fileinstall.version}=12
 mvn\:org.apache.servicemix.specs/org.apache.servicemix.specs.jaxb-api-2.2/${servicemix.specs.jaxb.version}=13
-mvn\:org.glassfish.jaxb/jaxb-runtime/${glassfish.bundles.jaxb.version}=14
+mvn\:org.apache.servicemix.bundles/org.apache.servicemix.bundles.jaxb-runtime/${servicemix.bundles.jaxb.version}=14
 mvn\:org.apache.karaf.features/org.apache.karaf.features.core/${karaf.version}=15
