--- a/catalog/solr/catalog-solr-commands/pom.xml
+++ b/catalog/solr/catalog-solr-commands/pom.xml
@@ -176,6 +176,21 @@
         <artifactId>catalog-core-commands</artifactId>
         <version>${project.version}</version>
       </dependency>
+        <dependency>
+            <groupId>jakarta.ws.rs</groupId>
+            <artifactId>jakarta.ws.rs-api</artifactId>
+            <version>${solr.javax.ws.rs.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.annotation</groupId>
+            <artifactId>jakarta.annotation-api</artifactId>
+            <version>${solr.javax.annotation-api.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>${javax.servlet-api.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
