--- a/pom.xml
+++ b/pom.xml
@@ -292,14 +292,16 @@
         <servicemix.specs.version>2.9.0</servicemix.specs.version>
         <servlet-api.version>3.1.0</servlet-api.version>
         <smtp.client.version>1.7.1</smtp.client.version>
-        <solr.version>9.4.1</solr.version>
+        <solr.version>9.8.1</solr.version>
         <solr.docs.version>9_2</solr.docs.version>
         <solr.httpclient.version>4.5.14</solr.httpclient.version>
         <solr.httpcore.version>4.4.16</solr.httpcore.version>
         <solr.httpmime.version>4.5.14</solr.httpmime.version>
-        <solr.jetty.version>10.0.20</solr.jetty.version>
+        <solr.jetty.version>10.0.22</solr.jetty.version>
         <solr.zookeeper.version>3.8.4</solr.zookeeper.version>
         <solr.spatial4j.version>0.8</solr.spatial4j.version>
+        <solr.javax.ws.rs.version>3.1.0</solr.javax.ws.rs.version>
+        <solr.javax.annotation-api.version>2.1.1</solr.javax.annotation-api.version>
         <spark.version>2.9.4</spark.version>
         <spatial4j.version>0.8</spatial4j.version>
         <spring.version>6.1.14</spring.version>
