--- a/platform/mime/tika/platform-mime-tika-resolver/pom.xml
+++ b/platform/mime/tika/platform-mime-tika-resolver/pom.xml
@@ -71,8 +71,7 @@
                             javax.xml.transform.dom,
                             javax.xml.transform.sax,
                             org.apache.commons.lang,
-                            org.apache.commons.io,
-                            org.apache.commons.io.input,
+                            org.apache.commons.io.*,
                             org.slf4j,
                             org.slf4j.ext,
                             org.osgi.framework,
