--- a/catalog/plugin/catalog-plugin-oauth/pom.xml
+++ b/catalog/plugin/catalog-plugin-oauth/pom.xml
@@ -122,6 +122,7 @@
                             siv-mode
                         </Embed-Dependency>
                         <Import-Package>
+                            !jakarta.servlet.*,
                             org.codice.ddf.security.token.storage.api,
                             net.minidev.*;version="${json-smart.version}",
                             *
@@ -142,7 +143,7 @@
                         <configuration>
                             <rules>
                                 <ArtifactSizeEnforcerRule implementation="org.codice.maven.artifactsize.ArtifactSizeEnforcerRule">
-                                    <maxArtifactSize>2.9_MB</maxArtifactSize>
+                                    <maxArtifactSize>3.2_MB</maxArtifactSize>
                                 </ArtifactSizeEnforcerRule>
                             </rules>
                         </configuration>
