--- a/platform/security/certificate/security-ocsp-checker/pom.xml
+++ b/platform/security/certificate/security-ocsp-checker/pom.xml
@@ -56,7 +56,12 @@
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcpkix-jdk15on</artifactId>
-            <version>${bouncy.version}</version>
+            <version>1.70</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>1.70</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
