--- a/platform/security/realm/security-realm-oidc/pom.xml
+++ b/platform/security/realm/security-realm-oidc/pom.xml
@@ -126,6 +126,12 @@
             <version>${auth0.jwt.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
