--- a/catalog/measure/catalog-measure-api/pom.xml
+++ b/catalog/measure/catalog-measure-api/pom.xml
@@ -30,12 +30,18 @@
         <dependency>
             <groupId>javax.measure</groupId>
             <artifactId>unit-api</artifactId>
-            <version>2.0</version>
+            <version>2.1.3</version>
         </dependency>
         <dependency>
             <groupId>systems.uom</groupId>
             <artifactId>systems-common</artifactId>
-            <version>2.0.2</version>
+            <version>2.1</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>indriya</artifactId>
+                    <groupId>tech.units</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>si.uom</groupId>
