--- a/features/utilities/pom.xml
+++ b/features/utilities/pom.xml
@@ -286,7 +286,12 @@
         <dependency>
             <groupId>tech.units</groupId>
             <artifactId>indriya</artifactId>
-            <version>2.0.2</version>
+            <version>2.1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apiguardian</groupId>
+            <artifactId>apiguardian-api</artifactId>
+            <version>1.1.1</version>
         </dependency>
         <dependency>
             <groupId>tech.uom.lib</groupId>
@@ -301,7 +306,7 @@
         <dependency>
             <groupId>si.uom</groupId>
             <artifactId>si-quantity</artifactId>
-            <version>2.0.1</version>
+            <version>2.1</version>
         </dependency>
         <dependency>
             <groupId>systems.uom</groupId>
@@ -311,12 +316,18 @@
         <dependency>
             <groupId>systems.uom</groupId>
             <artifactId>systems-common</artifactId>
-            <version>2.0.2</version>
+            <version>2.1</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>indriya</artifactId>
+                    <groupId>tech.units</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>javax.measure</groupId>
             <artifactId>unit-api</artifactId>
-            <version>2.0</version>
+            <version>2.1.3</version>
         </dependency>
         <dependency>
             <groupId>ddf.thirdparty</groupId>
