--- a/pom.xml
+++ b/pom.xml
@@ -218,7 +218,7 @@
         <net.minidev.asm.version>1.0.2</net.minidev.asm.version>
         <objenesis.version>3.2</objenesis.version>
         <ogc-tools-gml-jts.version>1.2.0</ogc-tools-gml-jts.version>
-        <org.geotools.version>28.4</org.geotools.version>
+        <org.geotools.version>29.6</org.geotools.version>
         <!-- Note: The swissbox version needs to match the version used by pax-exam . -->
         <org.ops4j.pax.swissbox.version>1.8.5</org.ops4j.pax.swissbox.version>
         <org.slf4j.version>1.7.32</org.slf4j.version>
@@ -481,7 +481,12 @@
             <dependency>
                 <groupId>tech.units</groupId>
                 <artifactId>indriya</artifactId>
-                <version>2.0.2</version>
+                <version>2.1.3</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apiguardian</groupId>
+                <artifactId>apiguardian-api</artifactId>
+                <version>1.1.1</version>
             </dependency>
             <dependency>
                 <groupId>tech.uom.lib</groupId>
@@ -496,7 +501,7 @@
             <dependency>
                 <groupId>si.uom</groupId>
                 <artifactId>si-quantity</artifactId>
-                <version>2.0.1</version>
+                <version>2.1</version>
             </dependency>
             <dependency>
                 <groupId>systems.uom</groupId>
@@ -506,12 +511,18 @@
             <dependency>
                 <groupId>systems.uom</groupId>
                 <artifactId>systems-common</artifactId>
-                <version>2.0.2</version>
+                <version>2.1</version>
+                <exclusions>
+                    <exclusion>
+                        <artifactId>indriya</artifactId>
+                        <groupId>tech.units</groupId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>javax.measure</groupId>
                 <artifactId>unit-api</artifactId>
-                <version>2.0</version>
+                <version>2.1.3</version>
             </dependency>
             <!-- END -->
 
@@ -775,7 +786,7 @@
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>exec-maven-plugin</artifactId>
-                    <version>3.1.0</version>
+                    <version>3.5.0</version>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
