--- a/catalog/transformer/catalog-transformer-pdf/pom.xml
+++ b/catalog/transformer/catalog-transformer-pdf/pom.xml
@@ -67,17 +67,17 @@
         </dependency>
         <dependency>
             <groupId>org.bouncycastle</groupId>
-            <artifactId>bcprov-jdk15on</artifactId>
+            <artifactId>bcprov-jdk18on</artifactId>
             <version>${bouncy.version}</version>
         </dependency>
         <dependency>
             <groupId>org.bouncycastle</groupId>
-            <artifactId>bcmail-jdk15on</artifactId>
+            <artifactId>bcmail-jdk18on</artifactId>
             <version>${bouncy.version}</version>
         </dependency>
         <dependency>
             <groupId>org.bouncycastle</groupId>
-            <artifactId>bcpkix-jdk15on</artifactId>
+            <artifactId>bcpkix-jdk18on</artifactId>
             <version>${bouncy.version}</version>
         </dependency>
         <dependency>
@@ -110,6 +110,8 @@
                             !com.ibm.icu.text,
                             !org.apache.pdfbox.debugger.*,
                             sun.java2d.cmm.kcms;resolution:=optional,
+                            picocli;resolution:=optional,
+                            sun.print;resolution:=optional,
                             *
                         </Import-Package>
                         <Embed-Dependency>
