Upgrade to Solr 9.8.1

--- a/distribution/test/itests/test-itests-ddf-core/pom.xml
+++ b/distribution/test/itests/test-itests-ddf-core/pom.xml
@@ -191,7 +191,7 @@
                                 <argument>${solr.port}</argument>
                                 <argument>-m</argument>
                                 <argument>512m</argument>
-                                <argument>-V</argument>
+                                <argument>--verbose</argument>
                                 <argument>${solr.force}</argument>
                             </arguments>
                             <async>true</async>
@@ -212,7 +212,7 @@
                                 <argument>stop</argument>
                                 <argument>-p</argument>
                                 <argument>${solr.port}</argument>
-                                <argument>-V</argument>
+                                <argument>--verbose</argument>
                             </arguments>
                             <async>false</async>
                             <timeout>60000</timeout>
