Use compose docker plugin

--- a/distribution/docker/solrcloud/src/main/resources-filtered/solrcloud/docker-compose.yml
+++ b/distribution/docker/solrcloud/src/main/resources-filtered/solrcloud/docker-compose.yml
@@ -1,4 +1,4 @@
-# a docker-compose.yml to start a simple cluster with one ZooKeeper node and two Solr nodes.
+# a docker compose.yml to start a simple cluster with one ZooKeeper node and two Solr nodes.
 #
 version: '3.7'
 
