--- a/distribution/docker/solrcloud/pom.xml
+++ b/distribution/docker/solrcloud/pom.xml
@@ -54,8 +54,9 @@
                             <goal>exec</goal>
                         </goals>
                         <configuration>
-                            <executable>docker-compose</executable>
+                            <executable>docker</executable>
                             <arguments>
+                                <argument>compose</argument>
                                 <argument>up</argument>
                                 <argument>-d</argument>
                             </arguments>
@@ -68,9 +69,10 @@
                             <goal>exec</goal>
                         </goals>
                         <configuration>
-                            <executable>docker-compose</executable>
+                          <executable>docker</executable>
                             <arguments>
-                                <argument>logs</argument>
+                              <argument>compose</argument>
+                              <argument>logs</argument>
                                 <argument>--tail=50</argument>
                                 <argument>-f</argument>
                             </arguments>
@@ -83,9 +85,10 @@
                             <goal>exec</goal>
                         </goals>
                         <configuration>
-                            <executable>docker-compose</executable>
+                            <executable>docker</executable>
                             <arguments>
-                                <argument>down</argument>
+                              <argument>compose</argument>
+                              <argument>down</argument>
                             </arguments>
                             <workingDirectory>${project.build.outputDirectory}/solrcloud</workingDirectory>
                         </configuration>
