--- a/distribution/ddf-common/src/main/resources-filtered/etc/custom.properties
+++ b/distribution/ddf-common/src/main/resources-filtered/etc/custom.properties
@@ -205,7 +205,8 @@ org.osgi.framework.system.packages.extra = \
     com.google.crypto.tink.proto;version=${tink.version}, \
     com.google.crypto.tink.subtle;version=${tink.version}, \
     com.google.protobuf;version=${protobuf.version}, \
-    org.json;version=${org.json.version}
+    org.json;version=${org.json.version}, \
+    com.sun.activation.registries;version=${jakarta.activation.version}
 
 #
 # javax.transaction is needed to avoid class loader constraint violation when using javax.sql
