--- a/distribution/kernel/pom.xml
+++ b/distribution/kernel/pom.xml
@@ -233,6 +233,12 @@
                                     <version>${jakarta.activation.version}</version>
                                     <outputDirectory>${setup.folder}/jdk9plus</outputDirectory>
                                 </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.sun.activation</groupId>
+                                    <artifactId>jakarta.activation</artifactId>
+                                    <version>${jakarta.activation.version}</version>
+                                    <outputDirectory>${setup.folder}/jdk9plus</outputDirectory>
+                                </artifactItem>
                             </artifactItems>
                         </configuration>
                     </execution>
