--- a/platform/solr/solr-dependencies/pom.xml
+++ b/platform/solr/solr-dependencies/pom.xml
@@ -38,7 +38,97 @@
                     <groupId>org.slf4j</groupId>
                     <artifactId>jcl-over-slf4j</artifactId>
                 </exclusion>
+                <exclusion>
+                    <artifactId>http2-client</artifactId>
+                    <groupId>org.eclipse.jetty.http2</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>http2-common</artifactId>
+                    <groupId>org.eclipse.jetty.http2</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>http2-hpack</artifactId>
+                    <groupId>org.eclipse.jetty.http2</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>http2-http-client-transport</artifactId>
+                    <groupId>org.eclipse.jetty.http2</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>jetty-alpn-client</artifactId>
+                    <groupId>org.eclipse.jetty</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>jetty-alpn-java-client</artifactId>
+                    <groupId>org.eclipse.jetty</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>jetty-client</artifactId>
+                    <groupId>org.eclipse.jetty</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>jetty-http</artifactId>
+                    <groupId>org.eclipse.jetty</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>jetty-io</artifactId>
+                    <groupId>org.eclipse.jetty</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>jetty-util</artifactId>
+                    <groupId>org.eclipse.jetty</groupId>
+                </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <artifactId>http2-client</artifactId>
+            <groupId>org.eclipse.jetty.http2</groupId>
+            <version>${solr.jetty.version}</version>
+        </dependency>
+        <dependency>
+            <artifactId>http2-common</artifactId>
+            <groupId>org.eclipse.jetty.http2</groupId>
+            <version>${solr.jetty.version}</version>
+        </dependency>
+        <dependency>
+            <artifactId>http2-hpack</artifactId>
+            <groupId>org.eclipse.jetty.http2</groupId>
+            <version>${solr.jetty.version}</version>
+        </dependency>
+        <dependency>
+            <artifactId>http2-http-client-transport</artifactId>
+            <groupId>org.eclipse.jetty.http2</groupId>
+            <version>${solr.jetty.version}</version>
+        </dependency>
+        <dependency>
+            <artifactId>jetty-alpn-client</artifactId>
+            <groupId>org.eclipse.jetty</groupId>
+            <version>${solr.jetty.version}</version>
+        </dependency>
+        <dependency>
+            <artifactId>jetty-alpn-java-client</artifactId>
+            <groupId>org.eclipse.jetty</groupId>
+            <version>${solr.jetty.version}</version>
+        </dependency>
+        <dependency>
+            <artifactId>jetty-client</artifactId>
+            <groupId>org.eclipse.jetty</groupId>
+            <version>${solr.jetty.version}</version>
+        </dependency>
+        <dependency>
+            <artifactId>jetty-http</artifactId>
+            <groupId>org.eclipse.jetty</groupId>
+            <version>${solr.jetty.version}</version>
+        </dependency>
+        <dependency>
+            <artifactId>jetty-io</artifactId>
+            <groupId>org.eclipse.jetty</groupId>
+            <version>${solr.jetty.version}</version>
+        </dependency>
+        <dependency>
+            <artifactId>jetty-util</artifactId>
+            <groupId>org.eclipse.jetty</groupId>
+            <version>${solr.jetty.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.solr</groupId>
